0.04
 - Fix error message.
 - Remove obsolete module usage from doc example.

0.03 2024-02-26T11:03:48+01:00
 - Add error to init() and prepare() without data.
 - Add missing cleanup() method to doc.
 - Add tests for cleanup() and init().
 - Fix link to image in doc.

0.02 2024-02-08T22:35:31+01:00
 - Fix label.
 - Regen example.

0.01 2024-02-07T21:01:43+01:00
 - First version.