@@ -1,4 +1,5 @@
 0.04
+ - Add tests for prepare().
  - Fix error message.
  - Remove obsolete module usage from doc example.
 
